Fixed navbar button being too small

--- a/hydroui.css
+++ b/hydroui.css
@@ -4548,8 +4548,7 @@ pre {
     color: #3c4144; }
   .navbar .nav-content {
     display: flex;
-    height: auto;
-    align-items: baseline; }
+    height: auto; }
   .navbar a {
     display: flex;
     align-items: center; }
