--- a/modules/_navbar.scss
+++ b/modules/_navbar.scss
@@ -27,7 +27,7 @@
   .nav-content {
     display: flex;
     height: auto;
-    align-items: baseline;
+    // align-items: baseline;
   }
 
   & a {
